[add] spazio scrollbar e risoluzione bug data

--- a/milestone-5/css/style.css
+++ b/milestone-5/css/style.css
@@ -42,6 +42,10 @@ body {
   border-radius: 25px;
 }
 
+.scrollbar-space{
+  padding-right: 8px;
+}
+
 /***** --sidebar-- *****/
 .sidebard {
   background-color: white;
@@ -178,11 +182,11 @@ body {
 
 /***** --chat-- *****/
 .chat {
-  background-image: url("../img/mine.jpg");
   height: 100%;
   width: 80%;
   width: calc(calc(100% / 3) * 2);
   min-width: 400px;
+  background-image: url("../img/mine.jpg");
 }
 
 .contact-info {
@@ -195,13 +199,23 @@ body {
 }
 
 .messages {
-  height: calc(calc(100% - var(--input-bar-height)) - var(--top-bar-height));
+  height: 100%;
   width: 100%;
-  overflow-y: auto;
   display: flex;
   flex-direction: column;
-  padding-left: 10%;
-  padding-right: 10%;
+  overflow: visible;
+}
+
+.messages-and-scrollbar {
+  height: calc(100% - calc(var(--input-bar-height) + var(--top-bar-height)));
+  width: 100%;
+  overflow-y: auto;
+  position: relative;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0),  calc(100% - 8px), rgb(250, 250, 250) calc(100% - 8px));
+}
+
+.messages.scrollbar-space {
+  width: calc(100% - 8px);
 }
 
 .message {
@@ -265,11 +279,13 @@ body {
 .sent {
   background-color: var(--sent-message-green);
   align-self: flex-end;
+  margin-right: 10%;
 }
 
 .received {
   background-color: white;
   align-self: flex-start;
+  margin-left: 10%;
 }
 
 .input-bar {
